# sofia

./: CMakeLists.txt  CONTRIBUTORS
at/: CMakeLists.txt
sci/: CMakeLists.txt  SofSciLinkDef.h
sofana/: CMakeLists.txt
sofdata/: CMakeLists.txt
sofonline/: CMakeLists.txt
sofsource/: CMakeLists.txt
tcal/: CMakeLists.txt  SofTcalLinkDef.h
tofwall/: CMakeLists.txt
trim/: CMakeLists.txt
